# openclaw-dashboard

./: .gitignore  BACKEND-DONE.md  DESIGN-REVIEW-V2.md  DESIGN-REVIEW.md  DESIGN-TRACKING.md  FINAL-REVIEW.md  FRONTEND-DONE.md  INTEGRATION-REPORT.md  MASTER-TODO.md  Makefile  PLAN-v2.md  PLAN.md  QA-FIXES.md  REVIEW-R1.md  REVIEW-R2.md  REVIEW-R3.md  REVIEW-R4.md  REVIEW-R5.md  REVIEW.md  TEST-REPORT.md  TODO.md  WAVE-5.1-SUMMARY.md  WAVES-v2.md  WAVES-v3.md  WAVES-v4.md  WAVES.md
agents/: backend-agent.md  frontend-agent.md  overseer-agent.md  planner-agent.md  reviewer-agent.md  tester-agent.md
backend/: README.md  pyproject.toml  smoke.sh
backend/app/: __init__.py  config.py  dependencies.py  main.py  utils.py
backend/app/middleware/: error_handler.py  host_validation.py
backend/app/models/: __init__.py  agent.py  common.py  config.py  cron.py  file.py  gateway.py  session.py
backend/app/routers/: __init__.py  agents.py  config.py  cron.py  gateway.py  health.py  sessions.py
backend/app/services/: __init__.py  agent_service.py  config_service.py  cron_service.py  file_service.py  gateway_service.py  session_service.py
backend/app/websocket/: live.py
backend/tests/: conftest.py  test_agent_service.py  test_agents.py  test_config.py  test_cron_service.py  test_files.py  test_gateway.py  test_gateway_service.py  test_integration.py  test_security.py  test_session_service.py  test_websocket.py
docs/: GUIDE.md  session-format.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx  router.tsx
frontend/src/api/: agents.ts  client.ts  config.ts  gateway.ts  sessions.ts
frontend/src/hooks/: useAgents.ts  useDocumentTitle.ts  useGateway.ts  useWebSocket.ts
frontend/src/pages/: AgentPage.tsx  AgentsPage.tsx  ConfigPage.tsx  DashboardPage.tsx  EditorPage.tsx  GatewayPage.tsx  NotFoundPage.tsx
frontend/src/stores/: agentStore.ts  configStore.ts  editorStore.ts  gatewayStore.ts  sessionStore.ts  toastStore.ts  wsStore.ts
frontend/src/styles/: globals.css
frontend/src/themes/: monacoTheme.ts
frontend/src/types/: files.ts  generated.ts  (+1 more)
(+41 files in other folders)
