[project]
name = "openclaw-dashboard"
version = "1.0.0"
description = "OpenClaw Agent Fleet Management Dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "watchfiles>=1.0",
    "python-dotenv>=1.0",
    "aiofiles>=24.0",
    "structlog>=24.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
