[project]
name = "openclaw-dashboard"
version = "1.0.0"
description = "OpenClaw Agent Fleet Management Dashboard — local web UI for monitoring and managing your OpenClaw agent fleet."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Miller Marcus", email = "miller@netglide.com" }]
keywords = ["openclaw", "dashboard", "agent", "fleet", "management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "watchfiles>=1.0",
    "python-dotenv>=1.0",
    "aiofiles>=24.0",
    "structlog>=24.0",
    "slowapi>=0.1.9",
    "croniter>=2.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[project.scripts]
openclaw-dashboard = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]
